# YAUSMA

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  IMPLEMENTATION_SUMMARY.md  README.md  bootstrap.sh  cliff.toml  devenv.nix  flake.nix  justfile  nixpacks.toml  openapi.yaml
.github/workflows/: backend-build-check.yml  dev_build_mobile.yml  release_master.yml  release_mobile.yml  release_please.yml  release_server.yml  release_server_docker.yml
backend/: Cargo.toml  README.md  Rocket.toml  build.nu  build.rs
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/src/: main.rs
mobile/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  build.nu  flutter_jank_metrics_01.json  justfile  pubspec.yaml
mobile/android/: gradle.properties
mobile/android/app/: build.gradle
mobile/lib/: main.dart
mobile/test/: widget_test.dart
server/: index.ts  package.json
web/: NEWS_FEATURES.md  README.md  index.html  justfile  package.json  test-integration.html
web/css/: components.css  main.css
web/css/pages/: auth.css  home.css  news.css  portfolio.css  pro.css  stock-detail.css  stocks.css
web/css/themes/: dark.css  light.css
web/data/: countries.json  currencies.json  mock-stocks.json
web/docs/: api-integration.md  deployment.md
web/js/: config.js  main.js
web/js/api/: README.md  auth.js  client.js  news.js  package.json  stocks.js
web/js/api/.openapi-generator/: FILES
web/js/api/docs/: DataApi.md  MarketOverviewItem.md  NewsItem.md  UserApi.md  UserCredentials.md
web/js/api/src/: ApiClient.js  (+1 more)
web/js/components/: chart.js  navbar.js  news-card.js  stock-card.js  theme-switcher.js
web/js/pages/: auth.js  home.js  news.js  portfolio.js  pro.js  stock-detail.js  stocks.js
web/js/utils/: app-initializer.js  auth-manager.js  bootstrap-init.js  cookie-manager.js  currency.js  formatting.js  global-theme-manager.js  location.js  storage.js
web/pages/: auth.html  news.html  portfolio.html  pro.html  stock-detail.html  stocks.html
(+12 files in other folders)
