[package]
name = "backend"
edition = "2024"

[workspace]
members = [
  "api"
]

[dependencies]
api = { path = "./api" }
rocket = { version = "0.5.1" }
# rocket = { version = "0.5.1", features = ["secrets"] }
rocket_okapi = "0.9.0"


[build-dependencies]
api = { path = "./api" }
rocket_okapi = "0.9.0"
serde_yaml = "0.9.34"
fs_extra = "1.3"
# rocket = { version = "0.5.1", features = ["secrets"] }
# rocket_okapi = "0.9.0"
# captcha = "1.0.0"
# sled = "0.34.7"
# serde_yaml = "0.9.34"
# tokio = { version = "1.45.1", features = ["full"] }
