[package]
name = "backend"
edition = "2024"
version = "1.1.1"

[workspace]
members = ["api"]

[dependencies]
rocket_okapi = "0.9.0"

[dependencies.api]
path = "./api"

[dependencies.rocket]
version = "0.5.1"

[build-dependencies]
rocket_okapi = "0.9.0"
serde_yaml = "0.9.34"
fs_extra = "1.3"

[build-dependencies.api]
path = "./api"
