[build-dependencies]
fs_extra = "1.3"
rocket_okapi = "0.9.0"
serde_yaml = "0.9.34"

[build-dependencies.api]
path = "./api"

[dependencies]
rocket_okapi = "0.9.0"

[dependencies.api]
path = "./api"

[dependencies.rocket]
version = "0.5.1"

[package]
edition = "2024"
name = "backend"
version = "1.5.1"

[workspace]
members = ["api"]
