[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# rocket = { version = "0.5.1", features = ["secrets"] }
rocket = { version = "0.5.1" }
rocket_okapi = "0.9.0"
captcha = "1.0.0"
sled = "0.34.7"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
thiserror = "2.0.12"
bincode = "2.0.1"
derive_more = { version = "2.0.1", features = [ "full" ] }
yahoo_finance_api = "4.0.0"
rust-embed="8.7.2"

# [dependencies.rocket_auth2]
# version = "0.6.1"
# features = ["sled"]
